METASOURCES = AUTO
pkglib_LTLIBRARIES = PWG2resonance.la
noinst_HEADERS = RESONANCES/AliRsnMCInfo.h \
      RESONANCES/AliRsnDaughter.h \
      RESONANCES/AliRsnPairParticle.h \
      RESONANCES/AliRsnCut.h \
      RESONANCES/AliRsnCutSet.h \
      RESONANCES/AliRsnCutMgr.h \
      RESONANCES/AliRsnExpression.h \
      RESONANCES/AliRsnPID.h \
      RESONANCES/AliRsnPIDIndex.h \
      RESONANCES/AliRsnPIDWeightsMgr.h \
      RESONANCES/AliRsnEvent.h \
      RESONANCES/AliRsnEventBuffer.h \
      RESONANCES/AliRsnReader.h \
      RESONANCES/AliRsnReaderTask.h \
      RESONANCES/AliRsnReaderTaskSE.h \
      RESONANCES/AliRsnPairDef.h \
      RESONANCES/AliRsnHistoDef.h \
      RESONANCES/AliRsnSimpleFunction.h \
      RESONANCES/AliRsnSimpleFcnInvMass.h \
      RESONANCES/AliRsnSimpleFcnResolution.h \
      RESONANCES/AliRsnSimpleAnalysis.h \
      RESONANCES/AliRsnSimpleAnalyzer.h \
      RESONANCES/AliRsnSimpleAnalysisTaskSE.h \
      RESONANCES/AliRsnPair.h \
      RESONANCES/AliRsnPairMgr.h \
      RESONANCES/AliRsnAnalysisTaskSEBase.h \
      RESONANCES/AliRsnBaseAT.h \
      RESONANCES/AliRsnAnalysisSE.h \
      RESONANCES/AliRsnComparisonAT.h \
      RESONANCES/AliRsnComparisonObj.h \
      
PWG2resonance_la_SOURCES = RESONANCES/AliRsnMCInfo.cxx \
      RESONANCES/AliRsnDaughter.cxx \
      RESONANCES/AliRsnPairParticle.cxx \
      RESONANCES/AliRsnCut.cxx \
      RESONANCES/AliRsnCutSet.cxx \
      RESONANCES/AliRsnCutMgr.cxx \
      RESONANCES/AliRsnExpression.cxx \
      RESONANCES/AliRsnPID.cxx \
      RESONANCES/AliRsnPIDIndex.cxx \
      RESONANCES/AliRsnPIDWeightsMgr.cxx \
      RESONANCES/AliRsnEvent.cxx \
      RESONANCES/AliRsnEventBuffer.cxx \
      RESONANCES/AliRsnReader.cxx \
      RESONANCES/AliRsnReaderTask.cxx \
      RESONANCES/AliRsnReaderTaskSE.cxx \
      RESONANCES/AliRsnPairDef.cxx \
      RESONANCES/AliRsnHistoDef.cxx \
      RESONANCES/AliRsnSimpleFunction.cxx \
      RESONANCES/AliRsnSimpleFcnInvMass.cxx \
      RESONANCES/AliRsnSimpleFcnResolution.cxx \
      RESONANCES/AliRsnSimpleAnalysis.cxx \
      RESONANCES/AliRsnSimpleAnalyzer.cxx \
      RESONANCES/AliRsnSimpleAnalysisTaskSE.cxx \
      RESONANCES/AliRsnPair.cxx \
      RESONANCES/AliRsnPairMgr.cxx \
      RESONANCES/AliRsnAnalysisTaskSEBase.cxx \
      RESONANCES/AliRsnBaseAT.cxx \
      RESONANCES/AliRsnAnalysisSE.cxx \
      RESONANCES/AliRsnComparisonAT.cxx \
      RESONANCES/AliRsnComparisonObj.cxx \
      